src/test/ui/macros/macro-backtrace-println.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-backtrace-println.rs:14:30
   |
LL |     ($fmt:expr) => (myprint!(concat!($fmt, "\n")));
   |                              ^^^^^^^^^^^^^^^^^^^
...
LL |     myprintln!("{}");
   |     ---------------- in this macro invocation
   |
   = note: this error originates in the macro `concat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

